feat: throw error router register
