# src/presentation/routes/auth.routes.js
@@ -1,8 +1,10 @@
 const express = require('express')
+const validationUserDataHandler = require('../../application/middlewares/validation-user-data.handler')
 const AuthController = require('../controllers/auth.controller')
+const errorHandler = require('../../application/middlewares/error.handler');
 
 const router = express.Router()
 
-router.post('/register', AuthController.register)
-
+router.post('/register', validationUserDataHandler, AuthController.register)
+router.use(errorHandler);
 module.exports = router;
